# oh_dice

./: .clang-format  CMakeLists.txt  GameConfig.h  Player.cpp  Player.h  Ploter.cpp  Ploter.h  README.md  main.cpp
